@@ -8,6 +8,7 @@ class Upsert
     end
 
     def execute(sql)
+      $stderr.write(%{Upsert: #{sql}\n}) if ENV['UPSERT_DEBUG'] == 'true'
       connection.execute_batch sql
     end
 
